weewx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: weewx
  labels:
    app: weewx
spec:
  ports:
    - port: 80
  selector:
    app: weewx
  type: NodePort
