weewx-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weewx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - weewx.napervilleweather.net
    secretName: weewx-napervilleweather-net-tls
  rules:
  - host: weewx.napervilleweather.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weewx
            port:
              number: 80
