weewx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weewx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: weewx.kozik.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weewx
            port:
              number: 80
